--- a/SayanJobeDone/Client/SayanJobeDone.Client.csproj
+++ b/SayanJobeDone/Client/SayanJobeDone.Client.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorGoogleMaps" Version="3.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.15" PrivateAssets="all" />
+    <PackageReference Include="Syncfusion.Blazor.Maps" Version="21.2.4" />
   </ItemGroup>
 
   <ItemGroup>
